[package]
name = "universal_grav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
codegen-units = 1
# fat lto reduces binary size, but compile times almost double, so no
lto = "fat"

[dependencies]
pixels =  "0.10.0"
winit = "0.27"
winit_input_helper = "0.13"
static_assertions = "1"
